--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About Sam</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Background</a>
+              <a class="nav-link js-scroll-trigger" href="#download">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -70,17 +70,23 @@
     <section id="about" class="content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+          <div class="col-lg-10 mx-auto">
+            <h1>About Samuel Ryzek</h1>
+            <p>Sam is currently attending Skill Distillery; a Java based full stack development bootcamp.
+              He is extremely excited about this career change and looks forward to becoming a full stack
+              software developer. In his previous career roles, Sam has served as a Naval Officer, a Casino
+              Executive, and a Management Consultant.</p>
+              <p> Sam's education background
+                includes a Bachelors of Science in Mathematics and a Masters of Science in Information Assurance.</p>
+              <p><a href="css\Samuel Ryzek Dev Resume.pdf" class="btn btn-default btn-lg">Developer Resume</a></p>
+              <p><a href="css\Samuel Ryzek Resume.pdf" class="btn btn-default btn-lg">Professional Resume</a></p>
           </div>
         </div>
+      </div>
+    </br>
+      <div class="col-lg-12" id="add-margin">
+        <img class="featurette-image img-fluid mx-auto"
+          src="css/grayskills.png" alt="technology" width="50%">
       </div>
     </section>
 
@@ -88,9 +94,9 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h1>Sam's Projects</h1>
+          <p>Sam's Project Portfolio</p>
+          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Project Page</a>
         </div>
       </div>
     </section>
@@ -100,8 +106,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Samuel Ryzek</h2>
-            <p>Feel free to take a look at Sam's LinkedIn profile or GitHub projects
+            <h1>Contact Samuel Ryzek</h1>
+            <p>Please take a look at Sam's LinkedIn profile or GitHub site.
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/samuel-ryzek-msia-4292046" class="btn btn-default btn-lg">
@@ -121,13 +127,10 @@
       </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
-
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Your Website 2017</p>
+        <p>Copyright &copy; Sam's Website 2017</p>
       </div>
     </footer>
 
@@ -139,8 +142,7 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
 
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.min.js"></script>
